[gd_scene load_steps=4 format=3 uid="uid://cqkyuqkur1uoh"]

[ext_resource type="Script" path="res://Ex3.gd" id="1_o24ou"]

[sub_resource type="LabelSettings" id="LabelSettings_mpgy2"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_0u7ve"]
font_size = 24

[node name="Ex3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o24ou")

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 523.0
offset_right = 248.0
offset_bottom = 632.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 521.0
offset_right = 520.0
offset_bottom = 636.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 575.0
offset_top = 520.0
offset_right = 779.0
offset_bottom = 637.0
text = "Exit"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 113.0
offset_right = 897.0
offset_bottom = 437.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 9.0
offset_right = 510.0
offset_bottom = 88.0

[node name="Egg" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 14.0
offset_right = 360.0
offset_bottom = 83.0
text = "Enter # of eggs purchased:"
label_settings = SubResource("LabelSettings_mpgy2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bill" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 112.0
offset_right = 388.0
offset_bottom = 175.0
text = "The bill is equal to:"
label_settings = SubResource("LabelSettings_0u7ve")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
